<resources>
    <string name="app_name">revealit TV</string>
    <string name="strHome">Home</string>
    <string name="strInternetAvailable">Internet Available</string>
    <string name="strNoInternetAvailable">No Internet Available</string>
    <string name="strWarningDialogTitle">Warning Message</string>
    <string name="strWarning">Warning:</string>
    <string name="strCreateNewList">Please create new list</string>
    <string name="strListName">List Name</string>
    <string name="strWarningMsg">Please keep this information somewhere secure that only have access to. Do not share them with anybody else. In case of losing your access to your assets in your wallet revealit TV will ask you to enter either of the displayed information.</string>
    <string name="strOk">Ok</string>
    <string name="strOK">OK</string>
    <string name="strStartOver">Start Over</string>
    <string name="stWaitListed">Waitlisted</string>
    <string name="strRetrieve">Retrieve</string>
    <string name="strAddAccount">Add Account</string>
    <string name="strStarted">Get Started</string>
    <string name="strAuthWarningMsg">Are you willing to authorise?</string>
    <string name="strAuthWarningMsgTwo">If not, simply decline the request by exiting the page.</string>
    <string name="strAccountAlreadyExists">Account Already Exists</string>
    <string name="strAreYouSure">Are you sure?</string>
    <string name="strDeleteWarningMessage">Removing your account may prohibit access to your wallet and rewards. Please ensure you have backed up your private key to be able to re-instate this account in the future</string>
    <string name="strMoreInformationNeeded">More Information Needed</string>
    <string name="strSignUpCanNotBeComplete">Signup Can Not Be Complete</string>
    <string name="strImportKeyUserAlreadyExists">User already exists. Do you want to Login?</string>
    <string name="strAccountAlreadyExistsWarningMsg">Your account already exists on a different device. Do you wish to retrieve your revealit TV account on this device?</string>
    <string name="strBioMetricActivationRequire">To be a revealit TV user you must have biometrics activated on your phone or tablet.</string>
    <string name="strNoARproduct">No AR Product Available</string>
    <string name="strNeedMoreInformation">We need some more information to complete account import.</string>
    <string name="strEnterYourPrivateKey">Enter your private key to continue</string>
    <string name="strImportYourPrivateKey">Import Private Key:</string>
    <string name="strRefreshingRewardHistory">Refreshing reward history...</string>
    <string name="strImportAccount">Import Account</string>
    <string name="strRestoreFromBackup">Restore from Backup</string>
    <string name="strAddAccountFromBackup">Add your account from backup</string>
    <string name="strLoginWithPrivateKey">Login with your private key</string>
    <string name="strSureToDeleteThisDialogue">Are you sure you wish to delete the timestamp?</string>
    <string name="strValidEmail">Please Enter Valid Emailid</string>
    <string name="strNoFeatureVideos">No feature video available</string>
    <string name="strPleaseWait">Please Wait</string>
    <string name="strFacingWalletDetails">Fetching Wallet details...</string>
    <string name="strFatchingRewardHistoryData">Fetching Reward history details...</string>
    <string name="strInvalidVerificationCode">Invalid verification code</string>
    <string name="strInvalidVerificationCodeMessage">You may have entered an incorrect verification code, please try again with the correct one.</string>
    <string name="strApiCallFailed">Api call failed!</string>
    <string name="strButton">Play Video</string>
    <string name="strARmode">Launch AR mode</string>
    <string name="strLogin">Login</string>
    <string name="strNO">No</string>
    <string name="strYES">Yes</string>
    <string name="strBack">Back</string>
    <string name="strBackUpLater">Backup Later</string>
    <string name="strAlreadyBackUp">Already Backup</string>
    <string name="strTestNewAuth">Test New Auth</string>
    <string name="strListen">Listen</string>
    <string name="strPlay">Play</string>
    <string name="strWallet">Wallet</string>
    <string name="strLogout">Logout</string>
    <string name="strYourReward">Your Reward: US$ 2.00 per referral</string>
    <string name="strCopyMsg">Hey!\nHere’s the link to install the revealit TV app.\n\nMake sure you use my exclusive referral code:‘xxxx’, otherwise you’ll be waitlisted.\n  https://apps.apple.com/us/app/reveaiit/id1243989590 \n https://play.google.com/store/apps/details?id=com.Revealit</string>
    <string name="strReferFriend">Refer a friend and you both Get Rewarded!</string>
    <string name="strPrivateKey">Private Key</string>
    <string name="strYourRecoveryPhras">Your Recovery Phrase:</string>
    <string name="strPrivatePem">Private Pem:</string>
    <string name="strRevealitPrivateKey">revealit Private Key:</string>
    <string name="strPublicPem">Public Pem:</string>
    <string name="strPhras">Mnemonic</string>
    <string name="strGetStarted">Get Started</string>
    <string name="strStatus">Status</string>
    <string name="strStatusPendingVerification">Pending Verification</string>
    <string name="strCreateAccount">Create Account</string>
    <string name="strCreateAccountTitleOne">We need some basic information to create</string>
    <string name="strCreateAccountTitleTwo">your revealit account</string>
    <string name="strRegisterAccount">Register</string>
    <string name="strSelectAccount">Select Account</string>
    <string name="strNoInternetConnection">Ooops...Looks like you internet is broken.\n Please check your connection and try again.</string>
    <string name="strAppIsInMaintenace">The App is Currently Under Maintenance</string>
    <string name="strUpgradeToLatestVersion">Update to Latest Version</string>
    <string name="strUpgradeToExperienceBatterFeatures">For more features and a better experience, please update the app to the latest version</string>
    <string name="strAppIsInMaintenaceMsg">We are undergoing some scheduled maintenance to make your experience better. This won’t take long.</string>
    <string name="strRevealitName">Revealit Name</string>
    <string name="strChooseaname">Choose a name you would like to use publicly</string>
    <string name="strChooseanameTwo">with revealit</string>
    <string name="strVerifyEmail">E-mail Address Verification</string>
    <string name="strThankyouforSigningUp">Thank you for signing up for revealit</string>
    <string name="strThankyouforSigningUpTitle">Please use the code emailed to you to verify below</string>
    <string name="strNext">Next</string>
    <string name="strBalance">Balance</string>
    <string name="strCurrency">Currency</string>
    <string name="strRewardHistory">Reward History</string>
    <string name="strType">Type</string>
    <string name="strAmount">Amount</string>
    <string name="strWhen">When</string>
    <string name="strWhereYouReferred">Were you referred?</string>
    <string name="strInstantReward">Earn an Instant Reward into your revealit TV wallet by providing a Referral Code</string>
    <string name="strLoadMore">Load More...</string>
    <string name="strLoading">Loading...</string>
    <string name="strDafaultToken">BTC</string>
    <string name="strCurrencySelection">Select Currency</string>
    <string name="strWarningTitleOne">Minimum password length 6</string>
    <string name="strWarningTitleTwo">Minimum 1 Digit, Lowercase, Uppercase</string>
    <string name="strWarningTitleThree">Max consecutive characters 2</string>
    <string name="strEmailid">Email</string>
    <string name="strPassword">Password</string>
    <string name="strLongPasswordSuggestionTitleOne">Hey that \'s long password right?</string>
    <string name="strLongPasswordSuggestionTitleTwo">Don’t worry if you’re onboard we will log you in with your face or fingerprint.</string>
    <string name="strLongPasswordSuggestionTitleThree">to login day to day.</string>
    <string name="strCreateAccountTermAndConditionOne">By clicking "Create Account"  you are agree to our </string>
    <string name="strCreateAccountTermAndConditionTwo">Terms of Services and Privacy Policy</string>
    <string name="strNoSpaceAllowed">No Spaces Allowed.</string>
    <string name="strEmailAlreadyRegistered">Email is already registered</string>
    <string name="strEmailAlreadyRegisteredMsg">This email is already registered with revealit would</string>
    <string name="strEmailAlreadyRegisteredMsgTwo">you like to</string>
    <string name="strBiomatricPermissionOne">Do you want to allow Revealit to use FaceId or FingerprintId?</string>
    <string name="strBiomatricPermissionTwo">revealit TV needs excess for you to authenticate with TouchId or FaceId</string>
    <string name="strDontAllow">Dont allow</string>
    <string name="strAccount">Account</string>
    <string name="strAdmin">admin</string>
    <string name="strMySavedList">My Saved Lists</string>
    <string name="strAdminCapital">Admin</string>
    <string name="strTokenBearer">Bearer</string>
    <string name="strOTPinboxMsg">Please check your inbox, We sent you an OTP</string>
    <string name="strCloudBackup">Cloud Backup</string>
    <string name="strPrivacy">Privacy</string>
    <string name="strMobileNumber">Mobile number</string>
    <string name="strSelect">Select</string>
    <string name="strProductAt">Product at</string>
    <string name="strDelete">Delete</string>
    <string name="strMySavedItems">My Saved Items</string>
    <string name="strDescription">Description</string>
    <string name="strFeatures">Features</string>
    <string name="strTechnicalInformation">Technical Information</string>
    <string name="strSaved">Saved</string>
    <string name="strSettings">Settings</string>
    <string name="strHelp">Help</string>
    <string name="strFetchingData">Fetching Data....</string>
    <string name="strTapToRevealit">Tap to reveal</string>
    <string name="strMyReveals">My Reveals</string>
    <string name="strSelectALl">Select All</string>
    <string name="strRevealSelected">Reveals Selected</string>
    <string name="strDeselectALl">Deselect All</string>
    <string name="strCancel">Cancel</string>
    <string name="strShare">Share</string>
    <string name="strFavorite">Favorite</string>
    <string name="strIngredient">Ingredients</string>
    <string name="strInstructions">Instructions</string>
    <string name="strFacebook">Facebook</string>
    <string name="strTwitter">Twitter</string>
    <string name="strInstagram">Instagram</string>
    <string name="strClearVideo">Are you sure you want to clear this video?</string>
    <string name="strClear">Clear</string>
    <string name="strClearAll">Clear All</string>
    <string name="strNoRewardDataAvailable">No reward data available</string>
    <string name="strUsernotfound">User not found! Please create new user</string>
    <string name="strUsernotfoundForThisName">User Not Found</string>
    <string name="strUsernotfoundPleaseCreateNewUser">The username mentioned cannot be found.\n Please create new user.</string>
    <string name="strEnterUserName">Please enter username!</string>
    <string name="strEnterPassword">Please enter password!</string>
    <string name="strUsernamePasswordWrong">Your email or password is incorrect.</string>
    <string name="strSomethingWentWrong">Something went wrong please try again.</string>
    <string name="strApiCallFailure">Api call failure</string>
    <string name="strProtonNotResponding">Proton server not responding.</string>
    <string name="strApproved">approved</string>
    <string name="strInternalServerError">Status code 500. Internal server error.</string>
    <string name="strPhoneIsAlreadyInUsed">This phone number is already registered</string>
    <string name="title_activity_home_navigationbar">MainActivity</string>
</resources>