<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="250dp"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strClearVideo"
            android:textColor="@color/colorGrayLight"
            android:textSize="12dp"
            android:gravity="center_horizontal"
            android:padding="15dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/colorGrayLight"/>

        <TextView
            android:id="@+id/txtClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strClear"
            android:textColor="@color/colorRedDark"
            android:textSize="15dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/colorGrayLight"/>
        <TextView
            android:id="@+id/txtClearAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strClearAll"
            android:textColor="@color/colorRedDark"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/colorGrayLight"/>

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strCancel"
            android:textColor="@color/colorBlue"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:padding="20dp"/>

    </LinearLayout>

</RelativeLayout>