<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/colorTransperent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bc_share_item"
        android:padding="10dp"
        >


        <TextView
            android:id="@+id/txtFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSharingMedia"
            android:text="@string/strFacebook"
            android:drawableLeft="@drawable/facebook"
            android:padding="5dp"
            android:drawablePadding="5dp"
            android:textSize="15dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/txtTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSharingMedia"
            android:text="@string/strTwitter"
            android:drawableLeft="@drawable/twitter"
            android:padding="5dp"
            android:drawablePadding="5dp"
            android:textSize="15dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>
        <TextView
            android:id="@+id/txtInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSharingMedia"
            android:text="@string/strInstagram"
            android:drawableLeft="@drawable/instagram"
            android:padding="5dp"
            android:drawablePadding="5dp"
            android:textSize="15dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>

    </LinearLayout>

</RelativeLayout>