<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/strBiomatricPermissionOne"
                android:textAlignment="center"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/strBiomatricPermissionTwo"
                android:textColor="@color/colorGrayBottomBar"
                android:textSize="12dp"
                android:textAlignment="center"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayBottomBar"
                android:layout_marginTop="30dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <TextView
                    android:id="@+id/txtDontAllow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/strDontAllow"
                    android:textColor="@color/colorGrayBottomBar"
                    android:textSize="12dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/strOk"
                    android:textColor="@color/colorGrayBottomBar"
                    android:textSize="12dp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textStyle="bold"/>


            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>