<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cross"
            android:layout_margin="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strRevealitName"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strChooseaname"
                android:textAlignment="textStart"
                android:textColor="@color/colorGrayLight"
                android:textSize="12dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strChooseanameTwo"
                android:textAlignment="textStart"
                android:textColor="@color/colorGrayLight"
                android:textSize="12dp"
                />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/round_corner_border"
                android:layout_marginTop="40dp"
                android:drawableRight="@mipmap/check"
                android:singleLine="true"
                android:textSize="13dp"
                android:maxEms="50"
                android:textColor="@color/colorGrayBottomBar"
               />


        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/txtGetNextDisabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strRegisterAccount"
            android:background="@drawable/round_corner_disabled_registration"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:textSize="12dp"
            android:visibility="gone"

            />
        <TextView
            android:id="@+id/txtNextEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strRegisterAccount"
            android:background="@drawable/round_corner_enabled_registration"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:padding="10dp"
            android:textSize="12dp"

            />

    </LinearLayout>


</RelativeLayout>